--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,5 +1,6 @@
 FROM alpine:3.22
 
+# Create certificate with image
 RUN apk update && apk upgrade && apk add --no-cache nginx openssl && mkdir -p /etc/nginx/ssl \
 	&& openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
     -keyout /etc/nginx/ssl/inception.key \
@@ -8,5 +9,8 @@ RUN apk update && apk upgrade && apk add --no-cache nginx openssl && mkdir -p /e
 
 COPY /conf/nginx.conf /etc/nginx/http.d/default.conf
 
+# Define used binary inside
 ENTRYPOINT ["/usr/sbin/nginx"]
+
+# Default args (start as process)
 CMD ["-g", "daemon off;"]
