--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -13,6 +13,12 @@ server {
 		try_files $uri $uri/ =404;
 	}
 
+	location /adminer {
+		include fastcgi_params;
+		fastcgi_pass adminer:9000;
+		fastcgi_param SCRIPT_FILENAME /var/www/adminer/adminer.php;
+	}
+
 	location ~ \.php$ {
 		include fastcgi_params;
 		fastcgi_pass wordpress:9000;
