--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -19,6 +19,18 @@ server {
 		fastcgi_param SCRIPT_FILENAME /var/www/adminer/adminer.php;
 	}
 
+	location /portainer/ {
+        proxy_pass http://portainer:9000/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_read_timeout 900s;
+    }
+
 	location ~ \.php$ {
 		include fastcgi_params;
 		fastcgi_pass wordpress:9000;
